# pyfluent-parametric

./: .gitignore  .pre-commit-config.yaml  CNAME  Makefile  README.rst  index.html  pyproject.toml  sitemap.xml  versions.json
.ci/: pull_fluent_image.sh
.github/: dependabot.yml
.github/workflows/: ci_cd.yml  dependency-review.yml  nightly-doc-build.yml  nightly-test-run.yml  tag-iteration-ends.yml
dev/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev/_sources/: contributing.rst.txt
dev/api/: index.html
dev/examples/: index.html
dev/getting_started/: index.html
dev/users_guide/: index.html
doc/: Makefile  build_errors.txt  validate_png.py
doc/source/: conf.py  contributing.rst  index.rst
examples/: README.txt
examples/00-parametric/: README.txt  fluent-20220801-143755-15824.trn  fluent-20220801-145348-15188.trn  fluent-20220801-145608-16888.trn  fluent-20220801-151206-8628.trn  fluent-20220801-154326-27048.trn  fluent-20220801-155159-11584.trn  fluent-20220801-163952-9372.trn  fluent-20220801-170241-20024.trn  parametric_static_mixer_1.py  (+2 more)
release/: versions.json
requirements/: requirements_build.txt  requirements_doc.txt  requirements_tests.txt
tests/: conftest.py  test_casereader.py  test_input_output_parameters.py  test_input_parameters.py  test_lispy.py  test_local.py  test_local_parametric_run.py  test_local_parametric_setup.py  test_metadata.py  test_parametric.py  test_parametric_local.py  test_parametric_session.py  test_parametric_workflow.py  test_parametric_workflow_settings_api.py
version/: index.html
(+645 files in other folders)
