[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-fluent-parametric"
version = "0.9.dev0"
description = "A python wrapper for Ansys Fluent parametric workflows"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/pyfluent-parametric"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
importlib-metadata = {version = "^4.0", python = "<3.8"}
ansys-fluent-core = "~=0.18.dev0"
h5py = ">=3.7.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.fluent"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
-v
--cov=ansys.fluent
--cov-report html:cov_html
--cov-config=.coveragerc
--durations=0
--show-capture=all
"""
markers = [
    "fluent_version(version): Run tests based on Fluent version specification",
    "self_hosted: Tests that will run on self-hosted machines"
]